Update event saving function to return an id. Refactor to preserve prepare command. Also gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ majima_tax_program/result_0.json
 majima_tax_program/result_7.json
 majima_tax_program/result_10.json
 majima_tax_program/result_15.json
+Rest_Project/manifest.json
