--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ majima_tax_program/result_7.json
 majima_tax_program/result_10.json
 majima_tax_program/result_15.json
 Rest_Project/manifest.json
+.vscode/launch.json
